--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body style="cursor: none;">
+<div class="cursor-dot" data-cursor-dot></div>
+<div class="cursor-outline" data-cursor-outline></div>
+
+<body>
     <div id="box">Welcome!</div>
     <div id="box1">Choose a calculator</div>
-    
-    <div class="cursor-dot" data-cursor-dot></div>
-    <div class="cursor-outline" data-cursor-outline></div>
 
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-        <a href="‏‏Calculator 3.0/calculatorIndex.html" class="image">
+        <a href="https://calcutalor.onrender.com" class="image">
             <img style="height: 56vmin; width: 40vmin;" src="images/img2.jpg" draggable="false" /></a>
-        <a href="Vector Calculator 2.0\vectorIndex.html" class="image">
+        <a href="https://vector-calculator-51p8.onrender.com" class="image">
             <img style="height: 56vmin; width: 40vmin;" src="images/img1.jpg" draggable="false" /></a>
         <img class="image" src="images/img3.jpg" draggable="false" />
         <img class="image" src="images/img4.jpg" draggable="false" />
