--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <head>  
     <meta charset="UTF-8">
-    <mata name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SymboMath</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
