--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="logo">פרגנו לי</div>
+            <div class="logo">צרו קשר</div>
             <div class="social-links">
-                <a href="#">&#9993;</a>
+                <a href="mailto:yossi.heifetz06@gmail.com">&#9993;</a>
                 <a href="#">&#128279;</a>
                 <a href="https://www.linkedin.com/in/yosef-heifetz-64b6031b5/">🧑‍💼</a>
-                <a href="#">&#128214;</a>
+                <a href="https://github.com/joey486/calculator">&#128214;</a>
             </div>
         </div>
-
+            
         <!-- Main Content -->
         <div class="content">
             <a href="https://calcutalor.onrender.com" class="card article" id="card1">
