new vector calc

--- a/index.html
+++ b/index.html
@@ -56,15 +56,19 @@
             </div>
             <a href="https://calcutalor.onrender.com" class="card article" id="card1">
                 <div class="tag">LINK</div>
-                <h2>Simple calculator</h2>
+                <h2>Simple Calculator</h2>
             </a>
             <a href="https://vector-calculator-51p8.onrender.com" class="card article" id="card2">
                 <div class="tag">LINK</div>
-                <h2>Vector calculator</h2>
+                <h2>Vector Calculator</h2>
             </a>
             <a href="https://vite-calculus-calculator.onrender.com/" class="card article" id="card3">
                 <div class="tag">LINK</div>
-                <h2>Calculus calculator</h2>
+                <h2>Calculus Calculator</h2>
+            </a>
+            <a href="https://vector-calculator-v2.onrender.com/" class="card article" id="card4">
+                <div class="tag">LINK</div>
+                <h2>New Vector Calculator</h2>
             </a>
         </div>
     </div>
@@ -72,3 +76,4 @@
 
 <script src="script.js"></script>
 </html>
+
