graph calculator update

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 <div class="tag">LINK</div>
                 <h2>New Vector Calculator</h2>
             </a>
+            <a href="https://geo-desmos.onrender.com/" class="card article" id="card5">
+                <div class="tag">LINK</div>
+                <h2>Graph Calculator</h2>
+
+            </a>
         </div>
     </div>
 </body>
