binary tree initial commit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
             <a href="https://geo-desmos.onrender.com/" class="card article" id="card5">
                 <div class="tag">LINK</div>
                 <h2>Graph Calculator</h2>
-
+            </a>
+            <a href="https://binary-tree-calculator.vercel.app/" class="card article" id="card6">
+                <div class="tag">LINK</div>
+                <h2>Binary Tree Visualizer</h2>
             </a>
         </div>
     </div>
